@@ -7,13 +7,11 @@
 
     <configure zcml:condition="not-installed zope.app.container">
 
-      <!--
       <subscriber
           for="plone.app.discussion.interfaces.IComment
                zope.lifecycleevent.interfaces.IObjectAddedEvent"
           handler=".comment.notify_user"
           />
-      -->
       
       <subscriber
           for="plone.app.discussion.interfaces.IComment
@@ -28,13 +26,11 @@
     
     <configure zcml:condition="installed zope.app.container">
 
-      <!--
       <subscriber
           for="plone.app.discussion.interfaces.IComment
                zope.app.container.interfaces.IObjectAddedEvent"
           handler=".comment.notify_user"
           />
-      -->
 
       <subscriber
           for="plone.app.discussion.interfaces.IComment
