@@ -3,13 +3,13 @@ Products.PDBDebugMode = 1.1
 Products.PrintingMailHost = 0.7
 Sphinx-PyPI-upload = 0.2.1
 collective.recipe.omelette = 0.9
-collective.recipe.sphinxbuilder = 0.6.3.3
 collective.recipe.template = 1.8
 collective.xmltestreport = 1.0b3
 collective.z3cform.datetimewidget = 1.0.2
 coverage = 3.4
+hexagonit.recipe.download = 1.4.1
 interlude = 1.0
-ipython = 0.10
+ipython = 0.10.1
 logilab.pylintinstaller = 0.15.2
 mr.developer = 1.16
 plone.app.testing = 1.0a2
@@ -18,24 +18,23 @@ plone.supermodel = 1.0b5
 plone.testing = 1.0a2
 recaptcha-client = 1.0.5
 repoze.sphinx.autointerface = 0.4
-zc.recipe.cmmi = 1.3.2
 zest.releaser = 3.15
 zptlint = 0.2.3
 
 #Required by:
-#collective.akismet 1.0a3
+#collective.akismet 1.0b2dev
 akismet = 0.2.0
 
 #Required by:
-#plone.app.discussion 1.0b9dev
+#plone.app.discussion 1.0b11
 collective.autopermission = 1.0b1
 
 #Required by:
-#plone.app.discussion 1.0b9dev
+#plone.app.discussion 1.0b11
 plone.app.registry = 1.0b2
 
 #Required by:
-#plone.app.discussion 1.0b9dev
+#plone.app.discussion 1.0b11
 plone.registry = 1.0b2
 
 #Required by:
